# ska-ser-orchestration

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
application-ruleset/: ceph.tf  default.tf  dns.tf  docker_exporter.tf  elasticsearch.tf  grafana.tf  haproxy.tf  kibana.tf  lb.tf  main.tf  networks.tf  nexus.tf  node_exporter.tf  openvpn.tf  outputs.tf  prometheus.tf  reverseproxy.tf  terraform.tf  thanos.tf  thanos_sidecar.tf  variables.tf
aws-boundary/: controller.tf  database.tf  iam.tf  kms.tf  loadbalancer.tf  outputs.tf  securitygroup.tf  terraform.tf  variables.tf  worker.tf
aws-instance/: configurations.tf  instance.tf  outputs.tf  terraform.tf  variables.tf
examples/elasticsearch/: elasticsearch.tf  terraform.tf  variables.tf
examples/instance/: ansible.cfg  instance.tf  (+2 more)
examples/instance-group/: instance-group.tf  terraform.tf
openstack-ceph-cluster/: ceph.tf  configurations.tf  inventory.tf  outputs.tf  terraform.tf  variables.tf
openstack-elasticsearch-cluster/: configurations.tf  elasticsearch.tf  inventory.tf  kibana.tf  loadbalancer.tf  outputs.tf  roles.tf  variables.tf
openstack-instance/: configurations.tf  floating-ip.tf  instance.tf  inventory.tf  jump-host.tf  outputs.tf  security-group.tf  terraform.tf  validations.tf  variables.tf  volumes.tf
openstack-instance-group/: configurations.tf  instances.tf  inventory.tf  outputs.tf  security-group.tf  terraform.tf  variables.tf
scripts/: generate_ansible_inventory.py  tfstate-to-ansible-inventory.py  tfstate_inject_resources.py  tfstate_to_ansible_inventory.py
(+8 files in other folders)
